# longzoro-sa

gmsv/: CMakeLists.txt  callfromac.c  configfile.c  init.c  makefile  mclient.c  msignal.c  object.c  saacproto_cli.c  saacproto_util.c  setup.cf
gmsv/battle/: battle_command.c  battle_item.c  battle_magic.c  makefile
gmsv/char/: addressbook.c  char.c  char_data.c  char_talk.c  char_walk.c  chatmagic.c  chatroom.c  defaultPlayer.h  enemy.c  makefile  pet.c  skill.c  trade.c
gmsv/include/: battle.h  battle_event.h  char.h  char_data.h  enemy.h  item_event.h  lssproto_serv.h  net.h  npc_eventaction.h  object.h  pet_skill.h  readmap.h  saacproto_cli.h  version.h
gmsv/item/: item_event.c  make.exe.stackdump  makefile  rm.exe.stackdump
gmsv/magic/: magic.c
gmsv/map/: make.exe.stackdump  readmap.c
gmsv/npc/: makefile  npc_autopk.c  npc_eventaction.c  npc_exchangeman.c  npc_fmwarpman.c  npc_makepair.c  npc_manorsman.res  npc_npcenemy.c  npc_petshop.c  npc_roomadminnew.c  npc_simpleshop.c  npctemplate.c
gmsv/src/: autil.c  callfromac.c  callfromcli.c  function.c  log.c  lssproto_serv.c  main.c  net.c
gmsv/src/battle/: battle.c  battle_event.c  pet_skill.c  profession_skill.c
gmsv/src/char/: char_base.c  char_data.c  char_event.c  char_item.c  char_party.c  encount.c  family.c  title.c
gmsv/src/include/: char_base.h  char_talk.h  chatmagic.h  common.h  configfile.h  family.h  item.h  log.h  (+3 more)
saac/: CMakeLists.txt  acfamily.c  acserv.cf  char.c  recv.c  saacproto_serv.c
saac/include/: char.h  version.h
saac/src/: lock.c  mail.c  main.c  recv.c  sasql.c
(+25 files in other folders)
