cmake_minimum_required(VERSION 2.8)

file(COPY char DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY char_sleep DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY db DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY log DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY mail DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
configure_file(acserv.cf acserv.cf COPYONLY)

include_directories(src/include)
file(GLOB_RECURSE HEADER_FILES src/include/*.h)
file(GLOB_RECURSE SOURCE_FILES src/*.c)
add_executable(saac ${SOURCE_FILES} ${HEADER_FILES})
target_link_libraries(saac mysqlclient)